# zako

./: .gitignore  .gitmodules  AGENTS.md  AIInstruction.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  ApiNote.md  Cargo.toml  Context.md  LANGUAGES  LANGUAGES.json  README.md  TODO.md  build.json  cli.ts  core.ts  doc.ts  export_bindings.ts  fmt.sh  initiate.ps1  patch_doc.ts  prompt.tx  release.ts  run.ts  test.ts  tests.ts  tests_all.ts
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  todo.yml
.qoder/repowiki/zh/content/: 开发者指南.md  快速开始.md  构建规则开发.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.zako/: cache.db
hone/: Cargo.toml
hone/src/: context.rs  dependency.rs  engine.rs  error.rs  lib.rs  node.rs  status.rs
hone/tests/: dependency_tests.rs  engine_tests.rs  error_tests.rs
images/: readme_image_2.jpg.txt
kagami/: Cargo.toml
kagami/src/: kagami.rs  lib.rs
libraries/: initiate.ps1
src/: lib.rs  main.rs
src/api/: builtin.rs  id.rs  mod.rs
tests/: tsconfig.base.json  tsconfig.build.json  tsconfig.config.json  tsconfig.json  tsconfig.library.json  tsconfig.package.json  tsconfig.project.json  tsconfig.rule.json  tsconfig.script.json  tsconfig.toolchain.json
tests/.zako/types/zako/: console.d.ts  context.d.ts  core.d.ts  global.d.ts  package.d.ts  rt.d.ts  semver.d.ts  syscall.d.ts
tests/.zako/types/zako-js/: console.d.ts  core.d.ts  index.d.ts  package.json  project.d.ts  rt.d.ts  syscall.d.ts
tests/log_version/: BUILD.ts  ZPROJECT.ts  zako.jsonc  zako.toml  zako.ts  zmakefile.ts
tests/new_project/: zako.json  zako.ts
types/: builtin.d.ts
zako_camino/src/: lib.rs
zako_cancel/: Cargo.toml
zako_cancel/src/: lib.rs
zako_cancel/tests/: cancel_tests.rs
zako_cli/: Cargo.toml  build.rs
zako_cli/src/: buffered_writer.rs  main.rs
zako_core/: .gitignore  Cargo.toml  build.rs
zako_core/bindings/: author.d.ts  config_default.d.ts  config_operation.d.ts  config_type.d.ts  config_value.d.ts  dependency_source.d.ts  package.d.ts  pattern.d.ts  project.d.ts
zako_core/src/: author.rs  blob_handle.rs  blob_range.rs  cas.rs  cas_server.rs  cas_store.rs  computer.rs  config.rs  config_value.rs  configuration.rs  configured_project.rs  consts.rs  context.rs  dependency.rs  engine.rs  execution_result.rs  file_artifact.rs  file_finder.rs  fs.rs  future.rs  global_state.rs  id.rs  intern.rs  lib.rs  link.rs  local_cas.rs  make_builtin.rs  mirror.rs  module_loader.rs  module_specifier.rs  node_key.rs  node_value.rs  oxc_worker.rs  package.rs  package_id.rs  package_source.rs  pattern.rs  persistent.rs  platform.rs  project.rs  (+19 more)
zako_core/src/builtin/: mod.rs
zako_core/src/builtin/extension/: config.rs  console.rs  context.rs  core.rs  global.rs  mod.rs  package.rs  project.rs  rt.rs  semver.rs  syscall.rs
zako_core/src/builtin/id/: mod.rs
zako_core/src/builtin/js/: mod.rs
zako_core/src/compute/: file.rs  glob.rs  mod.rs  parse_manifest.rs  resolve_label.rs  resolve_manifest_script.rs  resolve_package.rs  resolve_project.rs  transpile_ts.rs
zako_core/src/module_loader/: mod.rs  specifier.rs
zako_core/src/node/: file.rs  glob.rs  mod.rs  node_key.rs  node_value.rs  parse_manifest.rs  resolve_label.rs  resolve_manifest_script.rs  resolve_package.rs  resolve_project.rs  transpile_ts.rs
zako_core/src/path/: interned.rs  mod.rs
zako_core/src/proto/: cas.proto  fs.proto
zako_core/src/protobuf/: net.proto  range.proto  transport.proto
zako_core/src/resource/: heuristics.rs  mod.rs
zako_core/src/resource/heuristics/: mod.rs  std.rs
zako_core/src/tests/: author_tests.rs  blob_range_tests.rs  config_value_tests.rs  id_tests.rs  intern_tests.rs  mod.rs  neutral_path_tests.rs  package_tests.rs  version_extractor_tests.rs
zako_core/src/worker/: mod.rs  oxc_worker.rs  protocol.rs  v8_worker.rs  v8worker.rs  worker_pool.rs
zako_digest/: Cargo.toml  build.rs
zako_digest/src/: blake3.rs  blake3_hash.rs  hash.rs  lib.rs  xxhash3.rs
zako_digest/src/protobuf/: digest.proto
zako_id/: Cargo.toml
zako_id/src/: lib.rs
zako_interner/: Cargo.toml
zako_interner/src/: chunk.rs  id_map.rs  key.rs  lib.rs  pool.rs
zako_js/: README.md  deno.json  package.json  tsconfig.json
zako_js/script/: build.ts  cpBindings.ts  tsconfig.json  updateTestsTemplate.ts
zako_js/src/: build.ts  core.ts  global.ts  jsr.json  tsconfig.json  tsdown.config.ts
zako_js/src/builtins/config/: index.ts
zako_js/src/builtins/console/: index.ts
zako_js/src/builtins/context/: index.ts
zako_js/src/builtins/core/: index.ts
zako_js/src/builtins/global/: index.ts
zako_js/src/builtins/package/: index.ts
zako_js/src/builtins/project/: index.ts
zako_js/src/builtins/rt/: index.ts
zako_js/src/builtins/rule/: index.ts
zako_js/src/types/: syscall.d.ts
zako_js/types/: console.d.ts  project.d.ts  syscall.ts  types.d.ts  workspace.d.ts
zako_json/: TODO.md  project_schema.json
zako_kgp/: Cargo.toml
zako_kgp/src/: main.rs
zako_resource/: Cargo.toml
zako_resource/src/: allocation.rs  lib.rs  pool.rs  resource_key.rs  shares.rs
zako_resource/src/heuristics/: mod.rs
zako_shared/: Cargo.toml
zako_shared/src/: lib.rs
zmake_cli/: Cargo.toml  build.rs
zmake_cli/src/: main.rs
zmake_js/: .gitignore  core.ts  deno.json  semver.ts  tsconfig.json  tsdown.config.ts
zmake_js/.rolldown/sid_1_1764455816090/: logs.json  meta.json
zmake_js/.rolldown/unknown-session/: logs.json  meta.json
zmake_js/src/: build.ts  project.tsconfig.json  semver.jsr.json  tsconfig.json
zmake_lib/: Cargo.toml  build.rs
zmake_lib/src/: Isolate.rs  cas.rs  cas_server.rs  configuration.rs  digest.rs  engine.rs  file_finder.rs  fs.rs  id.rs  lib.rs  local_cas.rs  make_builtin.rs  module_loader.rs  module_specifier.rs  platform.rs  project_resolver.rs  sandbox.rs  tool.rs  transformer.rs  transport_server.rs
zmake_lib/src/api/: engine.rs  project_resolver.rs
zmake_lib/src/builtin/js/: mod.rs
zmake_lib/src/extension/: path.rs
zmake_lib/src/path/: mod.rs
zmake_lib/src/proto/: cas.proto  digest.proto  fs.proto  net.proto
(+87 files in other folders)
