[workspace]
members = [
    "zako_core",
    "zako_cli",
    "zako_cancel",
    "zako_digest",
    "zako_interner",
    "kagami",
    "hone",
    "zako_email_address",
    "zako_camino",
    #"kagami",
]
# `cargo build --lib` to build zako_core
# `cargo build --bin zako` to build zako_cli
default-members = ["zako_core", "zako_cli"]
resolver = "3"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rustdoc]
missing_docs = "warn"

[workspace.dependencies]
zako-cli = { path = "./zako_cli" }
zako-core = { path = "./zako_core" }
zako-cancel = { path = "./zako_cancel" }
hone = { path = "./hone" }
zako-digest = { path = "./zako_digest" }
zako-interner = { path = "./zako_interner" }
email_address = { path = "./zako_email_address" }
camino = { path = "./zako_camino" }
# kagami = { path = "./kagami" }

clap = { version = "4.5", default-features = true, features = [
    "derive",
    # 若不是从天上赐的，clap就不能得什么:
    # "cargo",
    # "env",
    "unicode",
    "wrap_help",
] }
semver = { version = "1.0", features = ["serde"] }
unicode-ident = "1.0.22"
thiserror = "2"
cfg-if = "1.0.4"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.20"
serde = "1.0"
const_format = "0.2.35"
serde_json = "1.0"
ahash = "0.8.12"
argfile = "0.2"
lenient_semver = "0.4.2"

memmap2 = "0.9.9"

is_executable = "1"

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23"

zip = "6.0.0"

humantime = "2.3.0"

tracing-error = "0.2.1"

opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tracing-opentelemetry = "0.32.0"

static_init = "1.0.4"

redb = "3.1.0"

convert_case = "0.9.0"

tokio = { version = "1.48.0", features = ["full"] }

tracing-attributes = "0.1.24"

serde_core = "1.0.228"

ts-rs = { version = "11.1.0", features = [
    "format",
    "serde-compat",
    "serde-json-impl",
    "chrono-impl",
    "bigdecimal-impl",
    "url-impl",
    "uuid-impl",
    "bytes-impl",
    "semver-impl",
    "smol_str-impl",
] }

glob = "0.3.3"
strum = { version = "0.27", features = ["derive"] }

colorchoice-clap = "1.0.7"

eyre = "0.6"
color-eyre = "0.6"
colorchoice = "1.0.4"

zstd = "0.13.3"

url = "2.5.7"

futures = "0.3.31"
futures-util = "0.3.31"

v8 = "142.1.0"
serde_v8 = "=0.278.0"

reflink-copy = "0.1"

smallvec = "1.15.1"

oxc_transformer = "0.102.0"
oxc_allocator = "0.102.0"
oxc_codegen = "0.102.0"
oxc_parser = "0.102.0"
oxc_semantic = "0.102.0"
oxc_span = "0.102.0"

phf = { version = "0.13.1", features = ["macros", "std"] }

exit-code = "1.0"

bytes = "1.11.0"

flume = { version = "0.12.0", features = ["async"] }

async-stream = "0.3.6"

deno_core = "0.372.0"
deno_error = "0.7.1"

parking_lot = "0.12.5"

dunce = "1.0.5"

postcard = { version = "1.1.3", features = ["alloc"] }

blake3 = { version = "1.8.2", features = ["std", "serde", "mmap"] }
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }

rkyv = { version = "0.8.12", features = [
    "std",
    "alloc",
    "aligned",
    "bytecheck",
    "pointer_width_64",
    "little_endian",
    "smol_str-0_3",
    "arrayvec-0_7",
    "smallvec-1",
] }

hex = "0.4.3"

pathdiff = "0.2.3"

async-trait = "0.1.89"

shadow-rs = "1.4"
clap_complete = "4.5.61"
arrayvec = { version = "0.7.6", features = ["std", "serde"] }

reqwest = { version = "0.12.0", features = [
    "blocking",
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "socks",
    "default-tls",
    "native-tls",
] }
indicatif = "0.18.3"

prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14.2"
tonic = "0.14.2"
tonic-prost = "0.14.2"

tokio-stream = "0.1"

dashmap = { version = "6.1", features = ["inline", "rayon", "serde"] }

rayon = "1.11.0"

uuid = { version = "1.18.1", features = ["v4"] }

tokio-util = { version = "0.7.17", features = [
    "compat",
    "io",
    "net",
    "codec",
    "rt",
    "time",
] }

tracing-tree = "0.4.1"

dirs = "6.0.0"

ignore = "0.4.25"

crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"

orx-concurrent-bag = "3.4.0"

proptest = "1.9.0"

mimalloc = "0.1"

serde_bytes = "0.11.8"

smol_str = { version = "0.3.4", features = ["std", "serde"] }
schemars = { version = "1.1.0", features = [
    "std",
    "derive",
    "smol_str02",
    "smallvec-1",
] }

im = "15.1.0"

lasso = { version = "0.7.3", features = [
    "serialize",
    "inline-more",
    "ahasher",
    "multi-threaded",
] }

toml = "0.9.8"

evalexpr = { version = "13.1.0", features = ["regex"] }

getrandom = "0.3.4"

moka = { version = "0.12.11", features = ["sync", "future"] }

sysinfo = "0.37.2"

# used by zako_camino, we just make them happy
bincode = "1"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
lto = false
panic = "unwind"
strip = "none"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.bench]
inherits = "release"

[workspace.package]
version = "0.1.0"
authors = ["MoeGodot <me@kawayi.moe>"]
description = "The post-modern building tool that your mom warned you about."
documentation = "https://github.com/moefra/zako"
repository = "https://github.com/moefra/zako"
homepage = "https://github.com/moefra/zako"
edition = "2024"
license = "GPL-3.0-or-later"
