[package]
name = "zako-cancel"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
eyre.workspace = true

[lints]
workspace = true
