[package]
name = "zako-cli"

build = "build.rs"

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "zako"
path = "./src/main.rs"

[lints]
workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
argfile.workspace = true
shadow-rs.workspace = true

dirs.workspace = true

tokio.workspace = true

const_format.workspace = true
exit-code.workspace = true

num_cpus.workspace = true
tracing.workspace = true

zako-core.workspace = true

eyre.workspace = true
color-eyre.workspace = true
colorchoice-clap.workspace = true
colorchoice.workspace = true

tracing-subscriber.workspace = true

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
sha2.workspace = true
hex.workspace = true

tracing-error.workspace = true

humantime.workspace = true

tracing-tree.workspace = true

zstd.workspace = true
mimalloc.workspace = true

[features]
default = []

[build-dependencies]
shadow-rs.workspace = true
clap_complete.workspace = true
clap.workspace = true
reqwest.workspace = true
indicatif.workspace = true
tokio.workspace = true
futures-util.workspace = true
eyre.workspace = true
color-eyre.workspace = true
zip.workspace = true
sha2.workspace = true
hex.workspace = true
zstd.workspace = true
