[package]
name = "zako-core"

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
hone.workspace = true
semver.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
num_cpus.workspace = true

smol_str.workspace = true

im.workspace = true

bytes.workspace = true

async-stream.workspace = true
futures.workspace = true

tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
const_format.workspace = true
serde_json.workspace = true
ahash.workspace = true
lenient_semver.workspace = true

tokio.workspace = true

unicode-ident.workspace = true
eyre.workspace = true

zako-interner.workspace = true

glob.workspace = true

static_init.workspace = true

ts-rs.workspace = true

strum.workspace = true

tracing-attributes.workspace = true

deno_core.workspace = true
deno_error.workspace = true

parking_lot.workspace = true

oxc_transformer.workspace = true
oxc_allocator.workspace = true
oxc_codegen.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true

ignore.workspace = true

crossbeam.workspace = true
crossbeam-channel.workspace = true
orx-concurrent-bag.workspace = true

convert_case.workspace = true

blake3.workspace = true

url.workspace = true

hex.workspace = true

prost.workspace = true
prost-types.workspace = true
tonic-prost.workspace = true
tonic.workspace = true

uuid.workspace = true

toml.workspace = true

email_address.workspace = true

tokio-stream.workspace = true

dashmap.workspace = true

async-trait.workspace = true

phf.workspace = true

tokio-util.workspace = true

smallvec.workspace = true
pathdiff.workspace = true

zako-digest.workspace = true

flume.workspace = true

evalexpr.workspace = true

getrandom.workspace = true

zako-cancel.workspace = true

moka.workspace = true

sysinfo.workspace = true

dirs.workspace = true

rkyv.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
