[package]
name = "zako-digest"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
hex.workspace = true
tonic.workspace = true
serde.workspace = true
blake3.workspace = true
arrayvec.workspace = true
rkyv.workspace = true
smol_str.workspace = true
camino.workspace = true

[lints]
workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
