[package]
name = "zako_interner"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
dashmap.workspace = true
redb.workspace = true
rkyv.workspace = true
smol_str.workspace = true

[lints]
workspace = true
