[package]
name = "zako-kgp"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
image.workspace = true
eyre.workspace = true

[lints]
workspace = true
