[package]
name = "zako-resource"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smol_str.workspace = true

[lints]
workspace = true
