[package]
name = "zako-resource"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot.workspace = true
smol_str.workspace = true
thiserror.workspace = true
zako-id.workspace = true
sysinfo.workspace = true
zako-shared.workspace = true
tokio.workspace = true
async-trait.workspace = true
eyre.workspace = true
tracing.workspace = true

[lints]
workspace = true
